--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -8,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Home Page</h1>
-    <p>This is the home page of our application.</p>
+    <h1>Hello World</h1>
+    <p>This is the a HTML template.</p>
   </body>
 </html>
