[FT.] Default home with template base and home

--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Welcome home</title>
-  </head>
+{% extends "base.html" %}
 
-  <body>
-    <h1>Hello World</h1>
-    <p>This is the a HTML template.</p>
-  </body>
-</html>
+{% block content %}
+  <h1>Hello World</h1>
+  <p>This is the a HTML template.</p>
+{% endblock %}
